--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "stripe": "^8.148.0"
+    "paypal-express-checkout": "^1.6.3"
   },
   "devDependencies": {
     "dotenv": "^9.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "netlify dev"
   },
   "repository": {
     "type": "git",
